// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on active channel show 1`] = `
<li
  className="active"
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={null}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={null}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show with tutorial tip 1`] = `
<li
  className=""
  key="town-square"
>
  <SidebarChannelButtonOrLink
    badge={null}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/town-square"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="teammate-id"
    unreadMentions={0}
  />
  <SidebarTutorialTip
    offTopicDisplayName="Off-Topic"
    townSquareDisplayName="Town Square"
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show with unread mentions (must have mentions badge) 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge="mentions"
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item unread-title has-badge"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="teammate-id"
    unreadMentions={4}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show without membership and wit loading channel (must have loading badge) 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge="loading"
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on channel show without unread mentions (must have no badge) 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={null}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item unread-title has-close"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on fake channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={null}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName="Channel display name"
    handleClose={[Function]}
    link="/current-team/channels/channel-name?fakechannel=%7B%7D"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="teammate-id"
    unreadMentions={0}
  />
</li>
`;

exports[`component/sidebar/sidebar_channel/SidebarChannel should match snapshot, on myself channel show 1`] = `
<li
  className=""
  key="channel-name"
>
  <SidebarChannelButtonOrLink
    badge={null}
    channelId="test-channel-id"
    channelStatus="test"
    channelType="D"
    displayName={
      <FormattedMessage
        defaultMessage="{displayname} (you)"
        id="sidebar.directchannel.you"
        values={
          Object {
            "displayname": "Channel display name",
          }
        }
      />
    }
    handleClose={[Function]}
    link="/current-team/channels/channel-name"
    membersCount={8}
    rowClass="sidebar-item has-close"
    teammateDeletedAt={2017-01-31T23:00:00.000Z}
    teammateId="myself"
    unreadMentions={0}
  />
</li>
`;
